<resources>
    <string name="app_name">Test for Pluang</string>
    <string name="home">Home</string>
    <string name="wish_list">Wishlist</string>
    <string name="account">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="networkError">No Internet!</string>
    <string name="requestTimeOutError">Request time out!</string>
    <string name="unknownError">Something went wrong!</string>
    <string name="you_haven_t_added_anything_to_wish_list">You haven\'t added anything to wishlist!</string>
    <string name="high_price">High Price</string>
    <string name="low_price">Low Price</string>
    <string name="price">Price</string>
    <string name="closing_price">Closing Price</string>
    <string name="volume">Volume</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="logout">Logout</string>
    <string name="add_to_wishlist">Add to Wishlist</string>
</resources>